# AccentColor

./: .gitignore
AccentColor/: AccentColor.pro  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h
SO_CPP/: CMakeLists.txt  libraryCPP.cpp  libraryCPP.h
